Prevent overflow in sidebar nav

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -10,6 +10,12 @@ footer {
 	position: static;
 }
 
+.sidebar li {
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 @media (min-width: 992px) {
 	.sidebar .affix {
 		position: fixed;
